Refactor API, change publishers logic to queue-based.