@@ -1,10 +1,8 @@
 package com.github.tix320.kiwi.test.reactive;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.ConcurrentSkipListSet;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -19,24 +17,30 @@ import static org.junit.jupiter.api.Assertions.*;
 public class SinglePublisherTest {
 
 	@Test
-	public void simpleTest() {
-		List<Integer> expected = Arrays.asList(10, 15, 19, 20, 24);
-		List<Integer> actual = new ArrayList<>();
+	public void simpleTest() throws InterruptedException {
+		List<Integer> expected1 = List.of(10, 15, 20);
+		List<Integer> expected2 = List.of(19, 24);
+
+		List<Integer> actual1 = new CopyOnWriteArrayList<>();
+		List<Integer> actual2 = new CopyOnWriteArrayList<>();
 
 		Publisher<Integer> publisher = new SinglePublisher<>(10);
 		Observable<Integer> observable = publisher.asObservable();
-		observable.subscribe(actual::add);
+		observable.subscribe(actual1::add);
 		publisher.publish(15);
-		observable.subscribe(number -> actual.add(number + 4));
+		observable.subscribe(number -> actual2.add(number + 4));
 		publisher.publish(20);
 
-		assertEquals(expected, actual);
+		Thread.sleep(100);
+
+		assertEquals(expected1, actual1);
+		assertEquals(expected2, actual2);
 	}
 
 	@Test
-	public void compareAndSetTest() {
+	public void compareAndSetTest() throws InterruptedException {
 		List<Integer> expected = Arrays.asList(10, 15, 20, 25);
-		List<Integer> actual = new ArrayList<>();
+		List<Integer> actual = Collections.synchronizedList(new ArrayList<>());
 
 		SinglePublisher<Integer> publisher = new SinglePublisher<>(10);
 		Observable<Integer> observable = publisher.asObservable();
@@ -53,12 +57,14 @@ public class SinglePublisherTest {
 		assertEquals(25, publisher.getValue());
 		assertFalse(changed);
 
+		Thread.sleep(100);
+
 		assertEquals(expected, actual);
 	}
 
 	@Test
 	public void concurrentPublishTest() throws InterruptedException {
-		int count = 1000000;
+		int count = 100000;
 
 		Set<Integer> expected = IntStream.range(0, count).boxed().collect(Collectors.toSet());
 		Set<Integer> actual = new ConcurrentSkipListSet<>();
@@ -69,7 +75,7 @@ public class SinglePublisherTest {
 
 		IntStream.range(0, count).parallel().forEach(publisher::publish);
 
-		Thread.sleep(2000);
+		Thread.sleep(3000);
 		assertEquals(count, actual.size());
 		assertEquals(expected, actual);
 	}
